kubernetes/apps/automation/renovate-operator/app/httproute.yaml
# yaml-language-server: $schema=https://k8s-schemas.erwanleboucher.dev/gateway.networking.k8s.io/httproute_v1.json
---
# yaml-language-server: $schema=https://k8s-schemas.erwanleboucher.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: renovate-operator
spec:
  hostnames:
    - renovate.erwanleboucher.dev
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: renovate-operator
          namespace: automation
          port: 8081
